--- a/week1/day3/esercizio/index.html
+++ b/week1/day3/esercizio/index.html
@@ -72,7 +72,7 @@
             <h3>Method</h3>
             <hr>
             <ol>
-                <li>Make the focaccia dough</li>
+                <li><b>Make the focaccia dough</b></li>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis ratione distinctio dolores, ullam fuga, expedita unde incidunt hic omnis excepturi voluptates eaque asperiores consequuntur explicabo assumenda? Quia nulla omnis laboriosam!
                 Commodi id vero qui voluptatibus tenetris iure optio, iste ut tempore ipsum reiciendis qui laborum quo, eos enim perspiciatis maiores quae corporis. Libero eos non id, vero reprehenderit soluta aspernatur et atque. Ipsum, quasi!</p>
             </ol>
