--- a/week1/day4/esercizio/index.html
+++ b/week1/day4/esercizio/index.html
@@ -48,9 +48,9 @@
           <p>Le varie aree saranno quindi suddivise in:</p>
 
           <ul>
-            <li><p>Contenuti di intestazione del tag header</p></li>
-            <li><p>Contenuti centrali variabili del tag main</p></li>
-            <li><p>Contenuti di fine pagina comuni da inserire nel tag footer</p></li>
+            <li><p>Contenuti di intestazione del tag <code>&#60;header&#62;</code></p></li>
+            <li><p>Contenuti centrali variabili del tag <code>&#60;main&#62;</code></p></li>
+            <li><p>Contenuti di fine pagina comuni da inserire nel tag <code>&#60;footer&#62;</code></p></li>
           </ul>
 
           <p>
