--- a/week2/day3/teoria/array-multi.html
+++ b/week2/day3/teoria/array-multi.html
@@ -21,8 +21,8 @@
     }
 
     //for each -> metodo degli array che permette di applicare un'azione a ciascun elemento -> forEach associa una funzione 
-    studentsData.forEach((students) => {
-        students.forEach((data) => {
+    studentsData.forEach((students) => { //students lo chiamo come voglio
+        students.forEach((data) => {    //data lo chiamo come voglio
             console.log(data);
         })
     })
