--- a/week3/day2/pratica/esercizio.html
+++ b/week3/day2/pratica/esercizio.html
@@ -45,12 +45,13 @@
             const white = document.createTextNode("white");
             const gray = document.createTextNode("grey");
             const gold = document.createTextNode("gold");
+            document.getElementById('demo2').appendChild(b);
             switch (attuale) {
-                case 0 :document.getElementById('demo2').appendChild(b);      
+                case 0:      
                 break;
-                case 1: document.getElementById('demo2').appendChild(b);
+                case 1: 
                 break;
-                case 2: document.getElementById('demo2').appendChild(b);
+                case 2: 
                 break;
             }
         }
