--- a/week3/day3/pratica/index.html
+++ b/week3/day3/pratica/index.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="./css/font-awesome.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
-    <main>
+    <main id="tasks">
         <h1>TO DO LIST</h1>
         <form>
             <input type="text" id="inputField" placeholder="Inserisci qui">
             <button id="myBtn">Aggiungi</button>
         </form>
     </main>
-    <div id="tasks"></div>
+    <!-- <div id="tasks"></div> -->
 </body>
 </html>
