--- a/week4 buildwek1/test.html
+++ b/week4 buildwek1/test.html
@@ -20,10 +20,10 @@
             <h2 id="domanda"><!-- domanda --></h2>
 
             <div class="risposte">
-                <button class="bottoneRisposta"></button>
+                <!-- <button class="bottoneRisposta"></button>
                 <button class="bottoneRisposta"></button><br>
                 <button class="bottoneRisposta"></button>
-                <button class="bottoneRisposta"></button>
+                <button class="bottoneRisposta"></button> -->
             </div>
 
             <footer>
