--- a/week4 buildwek1/test.html
+++ b/week4 buildwek1/test.html
@@ -27,7 +27,7 @@
             </div>
 
             <footer>
-            <p id="nDomanda" class="upperCase"><!-- question x/10 -->Question 1<span class="pink"> / 10</span></p>
+            <p id="nDomanda" class="upperCase"><!-- question x/10 -->Question 1</p>
             </footer>
         </div>
         
