--- a/week4 buildwek1/index.html
+++ b/week4 buildwek1/index.html
@@ -27,9 +27,9 @@
             </ul>
 
 
-            <form class="condizioni">
+            <form class="condizioni" action="./test.html">
                 <div class="condizioni"><input type="checkbox" required><b>I promise to answer myself without help from amyone</b></div>
-                <button id="procedi" class="upperCase"><a href="./test.html">proceed</a></button>
+                <button id="procedi" class="upperCase">proceed</button>
             </form>
         </div>
 
