--- a/week4 buildwek1/index.html
+++ b/week4 buildwek1/index.html
@@ -28,7 +28,11 @@
 
 
             <form class="condizioni" action="./test.html">
-                <div class="condizioni"><input type="checkbox" required><b>I promise to answer myself without help from amyone</b></div>
+                <div class="condizioni">
+                    
+                    <input id="checkbox" type="checkbox" required><b>I promise to answer myself without help from amyone</b>
+                    
+                </div>
                 <button id="procedi" class="upperCase">proceed</button>
             </form>
         </div>
